--- a/app/styles/blocks/card-vertical.styl
+++ b/app/styles/blocks/card-vertical.styl
@@ -127,46 +127,27 @@
 		&_disk
 			font-weight bold
 
-	&-price
-		display inline-block
-		margin-top 2px
-		margin-left -15px
-		&__num
-			position relative
-			display inline-block
-		&__rub
-			position absolute
-			top -39px
-			right -42px
-			width 60px
-			height 120px
-
-	&-oldprice
-		display inline-block
-		padding-left 29px
-		font-family $text-fonts
-		font-size 16px
-		vertical-align top
-		&__num
-			position relative
-			display inline-block
-			margin-top 13px
-			&:after //зачёркивание
-				position absolute
-				top 10px
-				left -4px
-				width 55px
-				height 2px
-				background #e10000
-				content ''
-		&__rub
-			position absolute
-			top -27px
-			right -28px
-			width 38px
-			height 76px
-			& use
-				fill #838383
+	&__price
+		margin-top 3px
+		&-num
+			font-size 26px
+			&_old
+				position relative
+				display inline-block
+				vertical-align top
+				margin-top 11px
+				margin-left 5px
+				font-family $text-fonts
+				font-size 16px
+				color $rushina-dark-gray
+				&:after //зачёркивание
+					position absolute
+					top 10px
+					left -4px
+					width 116%
+					height 2px
+					background #e10000
+					content ''
 
 	&-avaliable
 		padding-bottom 23px
@@ -202,7 +183,7 @@
 			background #ff0000
 			&-caption //надпись
 				padding-top 8px
-				padding-left 19px
+				text-align center
 				font-size 14px
 				font-family $heading-fonts
 				font-weight bold
@@ -239,7 +220,7 @@
 			background #ffe800
 			&-caption //надпись
 				padding-top 8px
-				padding-left 19px
+				text-align center
 				font-size 14px
 				font-family $heading-fonts
 				font-weight bold
@@ -277,7 +258,7 @@
 		top 92%
 		z-index 300
 		display none
-		padding-bottom 16px
+		padding-bottom 20px
 		text-align center
 		border 3px solid #fcd42d
 		border-top none
@@ -300,26 +281,7 @@
 	&__rating
 		margin 2px auto
 		width 106px
-		font-size 0
-		&-stars
-			display inline-block
-			margin-top 5px
-			width 72px
-			height 11px
-			background url(../images/card-vertical_star.png)
-			&_checked
-				height 11px
-				background url(../images/card-vertical_star-checked.png)
-				&_1
-					width 15px
-				&_2
-					width 30px
-				&_3
-					width 45px
-				&_4
-					width 60px
-				&_5
-					width 72px
+		font-size 18px
 
 	&-voted
 		display inline-block
